...
        android:title="@string/pref_header_ui">
        //темная светлая тема
        <ListPreference
            android:defaultValue="@bool/pref_true"
            android:entries="@array/pref_arr_theme"
            android:entryValues="@array/pref_list_values"
            android:key="@string/pref_key_light_theme"
            android:negativeButtonText="@null"
            android:positiveButtonText="@string/ok"
            android:title="@string/pref_title_theme" />
        <!--//макет 4 - 6-->
        <ListPreference
            android:defaultValue="@string/pref_size_layout_def"
...
    <PreferenceCategory
        android:key="appSetting"
        android:title="@string/pref_header_app">
        //Показать welcome-page при следующем запуске
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_show_welcome"
            android:title="@string/pref_title_welcome_enable" />
        <!--//сортировка по дате установки/количество запусков/сортировка в алфавитном порядке(сортировать-->
        <!--A-Z или Z-A)/отсутствие сортировки-->
        <ListPreference
            android:defaultValue="@string/pref_sort_def"
            android:entries="@array/pref_arr_sorting"
...
