<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/vpHello"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rgPage" />

    <by.md.gornak.homework.view.PageIndicatorView
        android:id="@+id/rgPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/large_font"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal" />
    />

</RelativeLayout>